--- a/libs/sistema/theme/tokens/_textfield.tokens.scss
+++ b/libs/sistema/theme/tokens/_textfield.tokens.scss
@@ -1,4 +1,10 @@
 @import "./palette.tokens";
+@import "./typography.tokens";
+
+//=====================================
+// FONTS
+//=====================================
+$font-weight-label: $font-weight-regular;
 
 //=====================================
 // COLORS
