--- a/libs/sistema/src/lib/dropdown-button/dropdown-button.component.html
+++ b/libs/sistema/src/lib/dropdown-button/dropdown-button.component.html
@@ -1,6 +1,8 @@
 <pa-button class="nsi-dropdown-button"
            [size]="size"
+           [aspect]="aspect"
            [kind]="kind"
+           [disabled]="disabled"
            [paPopup]="popupRef"
            sameWidth>
   <ng-content></ng-content>
