--- a/libs/common/src/lib/section-navbar/section-navbar.component.html
+++ b/libs/common/src/lib/section-navbar/section-navbar.component.html
@@ -28,7 +28,8 @@
         </div>
       </div>
 
-      <div [fxHide]="true"
+      <div *ngIf="navItems.length > 0"
+           [fxHide]="true"
            [fxShow.lt-lg]="true"
            fxFlex="0 0 auto"
            class="section-navbar-select">
@@ -49,6 +50,26 @@
           <span class="arrow"
                 [class.arrow-up]="sectionsOpen"></span>
         </button>
+        <ng-template cdkConnectedOverlay
+                     [cdkConnectedOverlayOrigin]="trigger"
+                     [cdkConnectedOverlayOpen]="sectionsOpen"
+                     [cdkConnectedOverlayHasBackdrop]="true"
+                     [cdkConnectedOverlayOffsetY]="8"
+                     [cdkConnectedOverlayPositions]="position"
+                     (backdropClick)="toggleSelect()"
+                     cdkConnectedOverlayBackdropClass="cdk-overlay-transparent-backdrop">
+          <div [fxHide]="true"
+               [fxShow.lt-lg]="true"
+               class="section-select-options">
+            <div class="section-navbar-item"
+                 *ngFor="let item of navItems; let i = index">
+              <button [class.active]="i === activeIndex"
+                      (click)="toggleSelect(); onClick(i);">
+                {{ item.title | translate }}
+              </button>
+            </div>
+          </div>
+        </ng-template>
       </div>
 
       <footer fxFlex="0 0 auto">
@@ -61,24 +82,3 @@
     <ng-content select="stf-section-navbar-body"></ng-content>
   </div>
 </div>
-
-<ng-template cdkConnectedOverlay
-             [cdkConnectedOverlayOrigin]="trigger"
-             [cdkConnectedOverlayOpen]="sectionsOpen"
-             [cdkConnectedOverlayHasBackdrop]="true"
-             [cdkConnectedOverlayOffsetY]="8"
-             [cdkConnectedOverlayPositions]="position"
-             (backdropClick)="toggleSelect()"
-             cdkConnectedOverlayBackdropClass="cdk-overlay-transparent-backdrop">
-  <div [fxHide]="true"
-       [fxShow.lt-lg]="true"
-       class="section-select-options">
-    <div class="section-navbar-item"
-         *ngFor="let item of navItems; let i = index">
-      <button [class.active]="i === activeIndex"
-              (click)="toggleSelect(); onClick(i);">
-        {{ item.title | translate }}
-      </button>
-    </div>
-  </div>
-</ng-template>
