--- a/libs/sistema/theme/tokens/_textfield.tokens.scss
+++ b/libs/sistema/theme/tokens/_textfield.tokens.scss
@@ -2,6 +2,11 @@
 @import "./typography.tokens";
 
 //=====================================
+// SPACING
+//=====================================
+$margin-bottom-field: 0;
+
+//=====================================
 // FONTS
 //=====================================
 $font-weight-label: $font-weight-regular;
