--- a/apps/dashboard/src/app/setup/setup-invite/setup-invite.component.html
+++ b/apps/dashboard/src/app/setup/setup-invite/setup-invite.component.html
@@ -38,12 +38,12 @@
       >
         {{ 'generic.confirm_password' | translate }}
       </stf-input>
-    </form>
 
-    <div class="setup-invite-actions">
-      <stf-button minWidth="175px" color="secondary" type="submit" form="password-form">
-        {{ 'generic.go!' | translate }}
-      </stf-button>
-    </div>
+      <div class="setup-invite-actions">
+        <pa-button type="submit">
+          {{ 'generic.go!' | translate }}
+        </pa-button>
+      </div>
+    </form>
   </div>
 </app-setup-container>
