--- a/apps/dashboard/src/app/setup/setup-step1/setup-step1.component.html
+++ b/apps/dashboard/src/app/setup/setup-step1/setup-step1.component.html
@@ -25,12 +25,12 @@
       >
         {{ 'generic.confirm_password' | translate }}
       </stf-input>
-    </form>
 
-    <div class="setup-step1-actions">
-      <stf-button minWidth="175px" color="secondary" type="submit" form="password-form">
-        {{ 'generic.next_step' | translate }}
-      </stf-button>
-    </div>
+      <div class="setup-step1-actions">
+        <pa-button type="submit">
+          {{ 'generic.next_step' | translate }}
+        </pa-button>
+      </div>
+    </form>
   </div>
 </app-setup-container>
