--- a/apps/dashboard/src/app/activity/activity.component.html
+++ b/apps/dashboard/src/app/activity/activity.component.html
@@ -19,13 +19,10 @@
   <div class="tab-content">
     <app-activity-list [items]="(data | async).events"></app-activity-list>
     <div class="more-results">
-      <stf-button
-        (click)="loadMoreEvents()"
-        *ngIf="(data | async).pagination?.last === false"
-        color="gray"
-        padding="pd-l"
-        >{{ 'search.more_results' | translate }}</stf-button
-      >
+      <pa-button *ngIf="(data | async).pagination?.last === false"
+                 kind="inverted"
+                 (click)="loadMoreEvents()"
+      >{{ 'search.more_results' | translate }}</pa-button>
     </div>
   </div>
 </div>
